<resources>
    <string name="app_name">RFIDMaster</string>
    <string name="RFID_system">RFID盘点系统</string>
    <string name="remember_psd">记住密码</string>
    <string name="login">登录</string>
    <string name="select_hospital">请选择医院</string>
    <string name="hospital">医院</string>
    <string name="select_subject">请选择科室</string>
    <string name="select_please">请选择</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="next">下一步</string>
    <string name="title_content" formatted="false">（已登记%d,未登记%d,剩余%d）</string>
    <string name="type_name">品名</string>
    <string name="size">尺寸</string>
    <string name="days">滞留天数</string>
    <string name="count">数量</string>
    <string name="statistics">统计</string>
    <string name="detail">明细</string>
    <string name="save">保存</string>
    <string name="clear">清空</string>
    <string name="submit_success">提交成功</string>
    <string name="print">打印</string>
    <string name="complete">完成</string>
    <string name="code">芯片码</string>

    <string name="str_disconnect">断开连接</string>
    <string name="str_printer_conn_normal">打印机连接正常</string>
    <string name="str_printer_out_of_paper">打印机缺纸</string>
    <string name="str_printer_open_cover">打印机开盖</string>
    <string name="str_printer_error">打印机出错</string>
    <string name="str_state">状态：</string>
    <string name="str_cpclmode">面单模式</string>
    <string name="str_escmode">票据模式</string>
    <string name="str_tscmode">标签模式</string>
    <string name="str_printer_printmode_esc">打印模式:ESC</string>
    <string name="str_printer_printmode_tsc">打印模式:TSC</string>
    <string name="str_printer_printmode_cpcl">打印模式:CPCL</string>
    <string name="default_mode">默认模式，小票模式</string>
</resources>