<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/view_title" />

        <RelativeLayout
            android:id="@+id/btn_hospital"
            android:layout_width="match_parent"
            android:layout_height="46dp">

            <TextView
                android:id="@+id/tv_hospital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:text="@string/select_hospital"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="12dp"
                android:src="@mipmap/list_sel" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line" />

        <RelativeLayout
            android:id="@+id/btn_subject"
            android:layout_width="match_parent"
            android:layout_height="46dp">

            <TextView
                android:id="@+id/tv_subject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:text="@string/select_subject"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="12dp"
                android:src="@mipmap/list_sel" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line" />
    </LinearLayout>

    <TextView
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/btn_next"
        android:layout_width="316dp"
        android:layout_height="44dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/shape_button"
        android:gravity="center"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="16sp" />
</RelativeLayout>