<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:id="@+id/ll_root">
    <include layout="@layout/view_title" />

    <LinearLayout
        android:layout_marginTop="92dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@mipmap/submit_success"
            android:layout_width="30dp"
            android:layout_height="30dp"/>
        <TextView
            android:layout_marginStart="12dp"
            android:textSize="16sp"
            android:textColor="@color/main"
            android:text="@string/submit_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <TextView
        android:id="@+id/tv_no"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:textColor="#4A4A4A"
        android:text="单据号："
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_marginTop="72dp"
        android:id="@+id/btn_print"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@drawable/shape_button"
        android:layout_marginBottom="8dp"
        android:layout_width="316dp"
        android:layout_height="44dp">
        <ImageView
            android:layout_marginEnd="4dp"
            android:src="@mipmap/btn_save"
            android:layout_width="24dp"
            android:layout_height="24dp"/>
        <TextView
            android:textColor="@color/white"
            android:text="@string/print"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_complete"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@drawable/shape_button2"
        android:layout_width="316dp"
        android:layout_height="44dp">
        <ImageView
            android:layout_marginEnd="4dp"
            android:src="@mipmap/btn_complete"
            android:layout_width="24dp"
            android:layout_height="24dp"/>
        <TextView
            android:textColor="@color/main"
            android:text="@string/complete"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="打印份数"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:gravity="center"
            android:id="@+id/et_count"
            android:inputType="number"
            android:paddingLeft="5dp"
            android:text="1"
            android:layout_marginStart="10dp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>